adopted for stmelf